tests/ui/g-empty_arms.stderr
error[E0277]: `g::route(left, right)` arms must begin with a controller self-send
 --> tests/ui/g-empty_arms.rs:9:27
  |
9 |     let _ = g::route(arm, StepNil::PROGRAM);
  |             --------      ^^^^^^^^^^^^^^^^ route arm must begin with a controller self-send
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmHead` is not implemented for `StepNil`
note: required by a bound in `route`
 --> src/global.rs
  |
  | pub const fn route<LeftSteps, RightSteps>(
  |              ----- required by a bound in this function
...
  |     RightSteps: RouteArmHead + TailLoopControl,
  |                 ^^^^^^^^^^^^ required by this bound in `route`
